Instructions on how to build and install Complete the extension metadata file. (Requirement for installation through the UI)

--- a/extension.properties
+++ b/extension.properties
@@ -1,5 +1,5 @@
-name=@extname@
-description=The extension description can be customized by editing the extension.properties file.
-author=
+name=Ghidra 6502
+description=Improved 6502 support for Ghidra
+author=Tom Seddon
 createdOn=
-version=@extversion@
+version=9.1.2
